@@ -30,6 +30,7 @@ version <next>:
 - AVX-512/ZMM support added
 - Dropped support for building for Windows XP. The minimum supported Windows
   version is Windows Vista.
+- deconvolve video filter
 
 
 version 3.4:
